Start adding some styles
Add a navbar, content area and footer. Give gadgets a bit of styling.
Pick new fonts and make text non-selectable by default.

--- a/lib/src/components/input.html
+++ b/lib/src/components/input.html
@@ -1,4 +1,4 @@
-<label>
-    Input:
-    <input #input (keyup)='setInput(input.value)'>
-</label>
+<div class='header'>Input</div>
+<div class='content'>
+    <textarea #input (keyup)='setInput(input.value)' cols='40' rows='2'></textarea>
+</div>
