Gadgets can now be dragged around.
And I added a background image to the workspace that shows a grid,
so as gadgets are dragged around they can snap to the grid.

--- a/lib/src/components/input.html
+++ b/lib/src/components/input.html
@@ -1,4 +1,4 @@
-<div class='header'>Input</div>
+<div class='header'(mousedown)='startMove($event)'>Input</div>
 <div class='content'>
     <textarea #input (keyup)='setInput(input.value)' cols='40' rows='2'></textarea>
 </div>
