--- a/lib/src/components/workspace.css
+++ b/lib/src/components/workspace.css
@@ -1,3 +1,11 @@
 :host {
     display: block;
+    position: fixed;
+    top: 3.6em;
+    left: 0;
+    bottom: 1.7em;
+    right: 0;
+
+    background-image: url(/img/grid.png);
+    background-repeat: repeat;
 }
