--- a/lib/src/components/input.html
+++ b/lib/src/components/input.html
@@ -2,3 +2,4 @@
 <div class='content'>
     <textarea #input (keyup)='setInput(input.value)' cols='40' rows='2'></textarea>
 </div>
+<div class='output-port port0'></div>
