--- a/lib/src/components/gadget-input.css
+++ b/lib/src/components/gadget-input.css
@@ -1,8 +1,3 @@
 :host {
-    border: 0.1rem solid var(--green);
-}
-
-:host .header {
-    cursor: move;
-    background-color: var(--green);
+    --gadget-color: var(--green);
 }
