Finished a mockup of the pipe component
It's just a gray line for now, and the workspace just displays a
single pipe at a fixed position. The next commit will deal with
the creation and management of pipes.

--- a/lib/src/app.css
+++ b/lib/src/app.css
@@ -1,12 +1,17 @@
 :host {
     display: block;
+    --cell-width: 20px;
+}
+
+nav {
+    height: calc(var(--cell-width) * 3);
 }
 
 .footer {
     position: fixed;
     bottom: 0;
     width: 100%;
-    height: 1.6rem;
+    height: 20px;
 }
 
 .footer span {
