--- a/lib/src/components/workspace.html
+++ b/lib/src/components/workspace.html
@@ -1,3 +1,4 @@
 <input-gadget                 [output]='pipe1'></input-gadget>
 <md5-gadget   [input]='pipe1' [output]='pipe2'></md5-gadget>
 <md5-gadget   [input]='pipe2'></md5-gadget>
+<pipe></pipe>
