Can now create pipes dynamically.
A user can click and drag to draw a pipe. It's a little messy, but
it works.

--- a/web/css/main.css
+++ b/web/css/main.css
@@ -150,6 +150,7 @@ svg.pipe {
     z-index: 0;
     display: inline-block;
     position: absolute;
+    border: 1px solid red;
 }
 
 svg.pipe path {
