Add built-in help
It's very barebones, but it covers the basic usage and some non-obvious
features, like deleting items.

--- a/web/css/main.css
+++ b/web/css/main.css
@@ -30,6 +30,16 @@ pre {
     cursor: text;
 }
 
+/* Modals */
+
+div.modal {
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+div.modal-dialog {
+    max-width: 750px;
+}
+
 /* AppComponent */
 
 div#app {
