Fix a couple things:
* Make drag-and-drop compatible with Firefox. (Need to call
  event.preventDefault() and I also opted to choose a new MIME
  type for the drag data.)
* Add a cheeky warning for circular data flows. This is a quick
  hack. In the future I need to add some sort of cycle detector.
* Tweak textarea style on input gadgets.

--- a/web/css/main.css
+++ b/web/css/main.css
@@ -161,6 +161,7 @@ div.input-gadget textarea {
     border: none;
     resize: none;
     height: 60px;
+    width: 100%;
 }
 
 div.change-base-gadget {
