Toolbox is rendering gadget handles correctly

--- a/public/global.css
+++ b/public/global.css
@@ -29,128 +29,22 @@ pre {
     cursor: text;
 }
 
-/* Gadgets */
-
-div.gadget {
-    --border-width: 2px;
-    --port-height: calc(var(--cell-size) * 0.75);
-
-    z-index: 1;
-    position: absolute;
-    display: inline-block;
-    width: calc(var(--cell-size) * 16);
-    background: white;
-    border: var(--border-width) solid var(--gadget-color);
-}
-
-div.gadget .header {
-    cursor: move;
-    padding-left: 0.5rem;
-    background-color: var(--gadget-color);
-}
-
-div.gadget .content {
-    padding: 0.75rem 0.5rem;
-}
-
-div.gadget .content pre {
-    padding: 5px;
-    margin-bottom: 0;
-    overflow: hidden;
-}
-
-div.gadget .content span.null {
-    color: #747474;
-}
+/* These gadget styles are shared between the workspace and toolbox. */
 
 div.input-gadget {
     --gadget-color: var(--green);
-    height: calc(var(--cell-size) * 6);
-}
-
-div.input-gadget textarea {
-    border: none;
-    resize: none;
-    height: 60px;
-    width: 100%;
 }
 
 div.change-base-gadget {
     --gadget-color: var(--yellow);
-    height: calc(var(--cell-size) * 4);
 }
 
 div.hash-gadget {
     --gadget-color: var(--orange);
-    height: calc(var(--cell-size) * 4);
 }
 
 div.web-gadget {
     --gadget-color: var(--blue);
-    height: calc(var(--cell-size) * 4);
-}
-
-/* Ports */
-
-div.input-port, div.output-port {
-    position: absolute;
-    z-index: -1;
-    width: var(--cell-size);
-    height: var(--port-height);
-    border: var(--border-width) solid var(--gadget-color);
-}
-
-div.input-port {
-    top: calc(-1 * var(--cell-size) * 0.75);
-    border-top-left-radius: 30%;
-    border-top-right-radius: 30%;
-    background-color: var(--gadget-color);
-}
-
-div#workspace:not(.highlight-output-ports) div.input-port:not(.connected):hover {
-    cursor: crosshair;
-    border-color: blue;
-    background-color: blue;
-}
-
-div.output-port {
-    bottom: calc(-1 * var(--cell-size) * 0.75);
-    border-top: none;
-    border-bottom-left-radius: 30%;
-    border-bottom-right-radius: 30%;
-    background-color: white;
-}
-
-div#workspace:not(.highlight-available-input-ports) div.output-port:hover {
-    cursor: crosshair;
-    border-color: blue;
-    background-color: blue;
-}
-
-div.input-port.port0, div.output-port.port0 {
-    left: calc(var(--cell-size) - var(--border-width));
-}
-
-div.input-port.port1, div.output-port.port1{
-    left: calc(var(--cell-size) * 3 - var(--border-width));
-}
-
-div.input-port.port2, div.output-port.port2 {
-    left: calc(var(--cell-size) * 5 - var(--border-width));
-}
-
-div.input-port.port3, div.output-port.port3 {
-    left: calc(var(--cell-size) * 7 - var(--border-width));
-}
-
-div#workspace.highlight-available-input-ports div.input-port:not(.connected) {
-    border-color: lightblue;
-    background-color: lightblue;
-}
-
-div#workspace.highlight-output-ports div.output-port {
-    border-color: lightblue;
-    background-color: lightblue;
 }
 
 /* Pipes */
