Fine tune the gadgets
- Tweak gadget styles
- Fix some bugginess with drag-and-drop coordinates
- Animate gadget snap to grid on initial creation
- Move gadgets around the workspace and then snap to grid

--- a/public/global.css
+++ b/public/global.css
@@ -1,7 +1,7 @@
 body {
     --cell-size: 20px;
     --drawer-width: 18em;
-    --nav-height: calc(var(--cell-size) * 3);
+    --nav-height: 60px;
     --footer-height: var(--cell-size);
 
     font-family: 'Share Tech', sans-serif;
